01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
  labels:
    shared-gateway-access: "true"
